# MyCardGame

./: README.md  README.rst  pylintrc  pyproject.toml  runGame.py
mycardgame/: __init__.py  card_game.py
tests/: test_mycardgame.py
