[tool.poetry]
name = "MyCardGame"
version = "0.1.0"
description = ""
authors = ["Wogified-Main <8029325+Wogified@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
